# code

./: .gitignore  .gitmodules  Client.py  Example1.py  GeometryData  Makefile  MotorControlScript.py  MutiThreadingTest.py  README.md  RobotClass.py  RobotCliClass.py  Server.py  ServerClass.py  VelocityControl.py  WorldModel.py  agent_behaviours.py  agent_simulator.py  aim_to_shoot.py  ball_trajectory.py  basic_agent.py  clientPing.py  clientproto.py  coord_trans.py  example.config.json  goal_keeping.py  install.sh  kicker1  oldClient.py  oldServer.py  proto2_message_generator.py  pyproject.toml  random_agent.py  run.py  serverPing.py  sslvisionreceiver.py  token  turn_to_ball.py  worldTest.py  world_model_output.txt
.Trash-1000/info/: ssl-vision-cliFeb15LisaFixedBoundary.zip.trashinfo  ssl-vision-cliFeb15Quali.zip.trashinfo
KickerControl/: pulse.ino
MotorControl/: MotorControlClient.py  README.md
Old_But_Useful_codes/: RobotBehaviour.py  oldClient.py  oldServer.py
TRControl/: agent.py  agent_behaviours.py  command_senders.py  general_agent.py  path_general_agent.py  sim_path_agent.py  simple_agent.py  trcontrol.py
TRControl/grSim/: grSim_Packet_pb2.py
TRControl/motor_control/: MotorControlExample.py  (+1 more)
TeamControl/: teamcontrol.py  worldmodel.py
demo-client-server/: Makefile  udpclient.cpp  udpclient.hpp  udpserver.cpp  udpserver.hpp
goal_keeping/: agent_simulator.py  ball_trajectory.py  goalie_agent.py
prm/: .gitignore  README.md  SSL_vision_output.json  environment.txt  main.py  main_adapted.py  set_environment_file.py
shared/: action.py
(+95 files in other folders)
