[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WSUSSL"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sslclient"
]

dynamic = [
    "version"
]

[tools.setuptools.packages.find]
where = ["src"]

[tools.setuptools.dynamic]
version = {attr = "TeamControl.__version__"}